# anyreason

./: .gitignore  README.md  after-canvas-node-status-fix-console.txt  after-canvas-node-status-fix-network.txt  agent.md  batch-video-after-login.md  batch-video-snapshot.md  canvas-after-image-palette-click.md  canvas-before-image-generate.md  check_ports.sh  checklist.md  data-arch.md  deploy.sh  deployment.md  f3-image-snapshot.md  final-studio-network.txt  fix_nginx.py  fix_taskprovider.py  fixed-goal.md  max_hxj.md  nginx_default.conf  openapi-8100.json  plan_ai_model_import_export.md  plan_fix_asset_binding.md  playwright-current-studio-snapshot.md  playwright-final-snapshot.md  playwright-image-grid-post-select-snapshot.md  playwright-image-node-grid-snapshot.md  project-overview.md  remote-login-console.txt  remote-login-snapshot.md  reset_pwd_remote.py  spec.md  start-local-no-worker-reload.ps1  start-local.ps1  studio-create-dialog.md  studio-create-network.txt  studio-list-after-redis-fix.md  studio-network.txt  sync_db.ps1  (+10 more)
fastapi_backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  LOGGING_MEMO.md  _rewrite_test.py  check_ai_folder.py  check_asset_repo.py  check_assets.py  check_list_nodes.py  check_node_id.py  check_task.py  create_test_task.py  db_fix.sql  db_init.py  db_init.sql  db_init_complete.sql  db_init_fix.py  db_init_full.py  db_init_minimal.py  db_init_simple.py  debug_asset.py  debug_redis_queue.py  debug_task.py  debug_video_slot_queue.py  find_redis_hog.ps1  find_redis_hog_v2.ps1  find_redis_hog_v3.ps1  fix_db.sql  init_db.sql  (+21 more)
(+1186 files in other folders)
